src/app/page.module.css
.page {
    overflow-y: scroll;
    scrollbar-width: none;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
    height: 100vh;
}

.fadeInWrapperWrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.page > * > * >  section {
    width: auto;
    height: 100vh;

    padding-top: 18vh;

    scroll-snap-align: start;
}

@keyframes wiggle {
    0% { transform: translateY(0); }
    10% { transform: translateY(-5px); }
    20% { transform: translateY(5px); }
    30% { transform: translateY(-5px); }
    40% { transform: translateY(5px); }
    50% { transform: translateY(0); }
    100% { transform: translateY(0); }
}

.scrollArrow {
    position: relative;
    bottom: 8vh;

    width: calc(160 * var(--size)/192);
    height: var(--size);

    animation: wiggle 3s ease-in-out infinite;

    --size: 3vmax;
}

